--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>[03/2023] Our papers on <a href="">wireless security</a> and <a href="">federated learning</a> got accepted to IEEE ICC 2023 (Rome, Italy).</p>
 </li>
-<li><p>[02/2023] <a href="team.html">Various scholarships</a> are available for MSc and PhD students. Please contact me if you are interested in joining <a href="https://www.tcd.ie/">TCD</a> and working on IoT/6G/AI/Security.</p>
+<li><p>[02/2023] <a href="team.html">Various scholarships</a> are available. Please contact me if you are interested in joining <a href="https://www.tcd.ie/">TCD</a> and working on IoT/6G/AI/Security.</p>
 </li>
 <li><p>[02/2023] Congratulations Dr. Nadia for our paper on <a href="">THz-UAV Communications using NOMA</a> being accepted to IEEE TVT.</p>
 </li>
@@ -77,7 +77,7 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>[01/2023] <font color=red size=+0.5><b>New academic chapter!</b></font> I am currently with the <a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a>.</p>
 </li>
-<li><p>[10/2022] Many congratulations to Minh Duong for winning a best paper award from IEEE ATC 2022 for his work on Full-Stack Federated Distillation for Massive IoT. </p>
+<li><p>[10/2022] Congratulations Duong for winning a best paper award from IEEE ATC 2022 for his work on <a href="">FL for Massive IoT</a>. </p>
 </li>
 <li><p>[02/2022] I have been invited to serve as an editorial member for <a href="https://www.nature.com/srep/">Scientific Reports</a> [Nature, Q1, IF 4.379]. </p>
 </li>
@@ -85,7 +85,7 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>[12/2021] I have received an award from the Minister of Education (Korea) for outstanding contributions and research excellence. <br /></p>
 </li>
-<li><p>[10/2021] <font color=red size=+0.5><b>Hot!!!</b></font> We won the FDCRGP Grant ($136,000 for Jan. 2022 - Dec. 2024) for our research on Edge Learning for Video Surveillance (PI: <a href="mailto:tu.nguyen@nu.edu.kz">Dr. Tu Nguyen</a>). <br /></p>
+<li><p>[10/2021] <font color=red size=+0.5><b>Hot!!!</b></font> We won the FDCRGP Grant ($136,000 for Jan. 2022 - Dec. 2024) for our research on edge learning (PI: <a href="mailto:tu.nguyen@nu.edu.kz">Dr. Tu Nguyen</a>). <br /></p>
 </li>
 <li><p>[01/2021] I have received the <a href="Misc/Rv_Award_TVT_2020.pdf">Top Reviewer Award</a> from IEEE Transactions on Vehicular Technology in 2020.</p>
 </li>
@@ -128,7 +128,7 @@ Assistant Professor, Ph.D. <br />
 <p>He specializes in applying convex optimization, game theory, and machine learning to analyse and optimize cloud edge computing, wireless networks, and IoT systems. Specifically, his research focuses on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). He was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, and a co-recipient of an IEEE ATC Best Paper Award in 2022. He is an Editor of the Journal of Network and Computer Applications and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-15 13:06:56 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-15 13:21:38 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
