--- a/publication.html
+++ b/publication.html
@@ -83,12 +83,6 @@
 </li>
 <li><p>S. Pakravan, J.-Y. Chouinard, X. Li, M. Zeng, W. Hao, <b>Q.-V. Pham</b>, and O. A. Dobre, &ldquo;<a href="Physical">Layer Security for NOMA Systems: Requirements, Issues, and Recommendations</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-H. Vu, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="">Intelligent Spectrum Sensing with ConvNet for 5G and LTE Signals Identification</a>,&rdquo; submitted, <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, 2023.</p>
-</li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="">An Efficient Deep Network for Modulation Classification in Impaired MIMO-OFDM Systems</a>,&rdquo; submitted, <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, 2023.</p>
-</li>
-<li><p>T.-H. Vu, K.-T. Nguyen, <b>Q.-V. Pham</b>, T. Huynh-The, D. B. da Costa, V. N. Q. Bao, and S. Kim, &ldquo;<a href="">Outage Performance of THz-aided NOMA Systems with Spherical Stochastic Model</a>,&rdquo; submitted, <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, 2023.</p>
-</li>
 <li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; submitted, <i>International Conference on Learning Representations (ICLR)</i>, 2023.</p>
 </li>
 <li><p>A. Samanta, <b>Q.-V. Pham</b>, N.-N. Dao, A. Muthanna, and S. Cho, &ldquo;<a href="">mISO: Incentivizing Demand-Agnostic Microservices for Edge-Enabled IoT Networks</a>,&rdquo; under revision, <i>Transactions on Services Computing</i>.</p>
@@ -315,6 +309,12 @@
 <p><div id="Conferences"></p>
 <h2>Conferences</h2>
 <ol>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-H. Vu, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="">Intelligent Spectrum Sensing with ConvNet for 5G and LTE Signals Identification</a>,&rdquo; <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
+</li>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="">An Efficient Deep Network for Modulation Classification in Impaired MIMO-OFDM Systems</a>,&rdquo;<i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
+</li>
+<li><p>T.-H. Vu, K.-T. Nguyen, <b>Q.-V. Pham</b>, T. Huynh-The, D. B. da Costa, V. N. Q. Bao, and S. Kim, &ldquo;<a href="">Outage Performance of THz-aided NOMA Systems with Spherical Stochastic Model</a>,&rdquo; <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
+</li>
 <li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, and V. J. Reddi, &ldquo;<a href="">Solving Complex Sequential Decision-Making Problems by Deep Reinforcement Learning with Heuristic Rules</a>,&rdquo; <i>International Conference on Computational Science (ICCS)</i>, Prague, Czech Republic, Jul. 2023.</p>
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, M. Debbah, and S. Kim, &ldquo;<a href="">Physical-Layer Security in Short-Packet NOMA Systems with Untrusted Near User</a>,&rdquo; <i>IEEE International Conference on Communications (ICC)</i>, Rome, Italy, May 2023.</p>
@@ -383,7 +383,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-15 13:08:33 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-17 21:53:30 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
