--- a/publication.html
+++ b/publication.html
@@ -383,7 +383,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-18 07:44:13 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Copyright @2023 COIN-TCD. Last Updated: 2023-04-18 07:51:27 GMT Daylight Time.
 </div>
 </div>
 </td>
