--- a/team.html
+++ b/team.html
@@ -38,24 +38,26 @@
 <p><div id="Students"></p>
 <h2>Students</h2>
 <ul>
-<li><p>Le Thi Mai [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2021/03-Present]: Wireless AI and aerial access networks (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Thai-Hoc Vu [PhD, <a href="https://global.ulsan.ac.kr/en/Main.do">University of Ulsan</a>, 2021/03-Present]: Performance analysis of 6G short-packet communications (co-supervised with <a href="mailto:sungkim@ulsan.ac.kr">Prof. Sunghwan Kim</a>)</p>
 </li>
-<li><p>Swe Swe Latt [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: FL and 6G resource optimization (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Le Thi Mai [PhD, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2021/03-Present]: Wireless AI and aerial access networks (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Dao Thien Thanh [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: Deep learning and depth map (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Swe Swe Latt [PhD, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: FL and 6G resource optimization (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Nguyen Minh Duong [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: DRL and FL for 6G IoT (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Dao Thien Thanh [PhD, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: Deep learning and depth map (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Daeil Noh [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: Deep learning for radio signal processing (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Nguyen Minh Duong [PhD, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: DRL and FL for 6G IoT (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
 </li>
-<li><p>Sang Min Lee [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: communication-efficient FL for massive IoT in future 6G (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>) </p>
+<li><p>Daeil Noh [PhD, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: Deep learning for radio signal processing (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+</li>
+<li><p>Sang Min Lee [PhD, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: Communication-efficient FL for massive IoT (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>) </p>
 </li>
 </ul>
 <p></div></p>
 <p><div id="Alumnus"></p>
 <h2>Alumnus</h2>
 <ul>
-<li><p>Nadia Iradukunda [<a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/09-2022/08]. Current position: Lecturer, Mount Kenya University, Rwanda</p>
+<li><p>Nadia Iradukunda [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/09-2022/08]. Current position: Lecturer, Mount Kenya University, Rwanda</p>
 </li>
 <li><p>Le Thi Mai [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03-2021/02]. Current position: PhD student, Pusan National University, Korea</p>
 </li>
@@ -153,7 +155,7 @@ Deadline: 24 March 2023</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-15 13:04:07 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Copyright @2023 COIN-TCD. Last Updated: 2023-04-18 08:22:34 GMT Daylight Time.
 </div>
 </div>
 </td>
