--- a/activity.html
+++ b/activity.html
@@ -56,6 +56,12 @@
 </li>
 </ul>
 <p></div></p>
+<p><div id="Publicity Chair/Co-Chair"></p>
+<h2>Publicity Chair/Co-Chair</h2>
+<ul>
+<li><p>2023: <a href="http://www.ic-wcsp.org/2023/">SCSP 2023</a></p>
+</li>
+</ul>
 <p><div id="Technical Program Committee"></p>
 <h2>TPC / Invited Reviewers</h2>
 <ul>
@@ -145,7 +151,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-13 09:24:32 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Copyright @2023 COIN-TCD. Last Updated: 2023-04-19 10:22:21 GMT Daylight Time.
 </div>
 </div>
 </td>
