--- a/team.html
+++ b/team.html
@@ -65,7 +65,7 @@
 </li>
 <li><p>Hoang Huu Trung [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02]. Current position: Lecturer, Hue University, Vietnam</p>
 </li>
-<li><p>Nguyen Tien Hoang [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]. </p>
+<li><p>Nguyen Tien Hoang [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]. Current position: QA Project Leader, LG Innotek, Vietnam.</p>
 </li>
 <li><p>Maurice Nduwayezu [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]. Current position: PhD student, SeoulTech, Korea</p>
 </li>
@@ -155,7 +155,7 @@ Deadline: 24 March 2023</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-04-18 08:22:34 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-04-21 10:01:43 GMT Daylight Time.
 </div>
 </div>
 </td>
