--- a/team.html
+++ b/team.html
@@ -135,6 +135,11 @@
 <p><b>Prospective students</b>: Scholarships are available for self-motivated students. Please feel free to send me your resume, transcripts, proposals, and publications (if available). I apologize that I shall not reply due to a large number of received emails. I will get back to you should further information is needed. <br /></p>
 <p><b>Openings</b>:</p>
 <ul>
+<li><p>Twenty-five 36-month fellowships are available under the <a href="https://research.ie/funding/dorothy-cofund-programme/?f=postdoctoral">DOROTHY COFUND</a> programme. <br />
+Deadline for applications: 21 June 2023. <br /></p>
+</li>
+</ul>
+<ul>
 <li><p>You are invited to apply for <a href="https://marie-sklodowska-curie-actions.ec.europa.eu/calls/msca-postdoctoral-fellowships-2023">MSCA Postdoctoral Fellowships 2023</a>. <br />
 Deadline: 13 September 2023 (proposal submisison). <br />
 Note: You should contact me earlier to discuss our research interests and prepare the proposal. </p>
@@ -155,7 +160,7 @@ Deadline: 24 March 2023</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-04-21 10:01:43 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-04-21 17:36:10 GMT Daylight Time.
 </div>
 </div>
 </td>
