--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@ Assistant Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p>[02/2023] <a href="Misc\COIN_PhDStudents_Recruitment_2023.pdf"><b>Two-fully funded PhD scholarships</b></a> are available. Applicants can contact me via email if you want to join my COIN group @TCD.</p>
+</li>
 <li><p>[04/2023] Congratulations, Dr. Thien and Hoc. We got three papers accepted at IEEE SSP 2023 (Hanoi, Vietnam) and one letter at IEEE WCL.</p>
 </li>
 <li><p>[04/2023] I am invited to serve as track chair for <a href="https://soict.org/">SOICT 2023</a>. Submit your high-quality papers and visit HCM City, Vietnam in Dec. 2023. </p>
@@ -70,8 +72,6 @@ Assistant Professor, Ph.D. <br />
 <li><p>[04/2023] Congratulations Dr. Thi Nguyen for his work on <a href="">deep RL</a> being accepted to ICCS 2023 (Prague, Czech).</p>
 </li>
 <li><p>[03/2023] Our papers on <a href="">wireless security</a> and <a href="">federated learning</a> got accepted to IEEE ICC 2023 (Rome, Italy).</p>
-</li>
-<li><p>[02/2023] <a href="team.html">Various scholarships</a> are available. Please contact me if you are interested in joining <a href="https://www.tcd.ie/">TCD</a> and working on IoT/6G/AI/Security.</p>
 </li>
 <li><p>[02/2023] Congratulations Dr. Nadia for our paper on <a href="">THz-UAV Communications using NOMA</a> being accepted to IEEE TVT.</p>
 </li>
@@ -130,7 +130,7 @@ Assistant Professor, Ph.D. <br />
 <p>He specializes in applying convex optimization, game theory, and machine learning to analyse and optimize cloud edge computing, wireless networks, and IoT systems. Specifically, his research focuses on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). He was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, and a co-recipient of an IEEE ATC Best Paper Award in 2022. He is an Editor of the Journal of Network and Computer Applications and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications</p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-04-18 07:57:35 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-04-25 20:48:16 GMT Daylight Time.
 </div>
 </div>
 </td>
