--- a/grantaward.html
+++ b/grantaward.html
@@ -31,6 +31,12 @@
 <p><div id="Grants"></p>
 <h2>Grants</h2>
 <ul>
+<li><p><b>Enterprise Ireland's ERC Funding Support</b> (€15,982), Apr. 2023 - Apr. 2025 <br /> 
+Principal Investigator. Project EC20231518 <br /> 
+Title: &ldquo;Generalized Knowledge Abstraction for Data Reconstruction and Lifelong Learning&rdquo;</p>
+</li>
+</ul>
+<ul>
 <li><p><b>NRF Basic Science and Research</b> (500,000,000 KRW), Feb. 2019 - Feb. 2024 <br /> 
 Principal Investigator. Grant NRF-2019R1C1C1006143 <br /> 
 Title: &ldquo;Privacy Enhancing Connected Cars in 5G and Beyond&rdquo;</p>
@@ -62,28 +68,30 @@ Pusan National University</p>
 </ul>
 <p></div></p>
 <p><div id="Awards"></p>
-<h2>Awards</h2>
+<h2>Awards and Prizes</h2>
 <ul>
 <li><p>Best paper award, IEEE International Conference on Advanced Technologies for Communications (ATC), 2022.</p>
 </li>
 <li><p>World's top 2% of scientists on Stanford University list, 2021-2022.</p>
 </li>
-<li><p>Golden globe award 2021 from the Ministry of Science and Technology (Vietnam), 2021.</p>
+<li><p>Golden globe award, Ministry of Science and Technology (Vietnam), 1,000,000 KRW, 2021.</p>
 </li>
 <li><p>Award for outstanding contributions and research excellence from Minister of Education (Korea), 2021.</p>
 </li>
-<li><p>Top Reviewer Award from IEEE Transactions on Vehicular Technology, 2020.</p>
+<li><p>Top reviewer award, IEEE Transactions on Vehicular Technology, 2020.</p>
 </li>
-<li><p>Best PhD dissertation (rank #1) in engineering from Inje University, 2017.</p>
+<li><p>Best PhD dissertation (rank #1) in engineering, Inje University, 1,000,000 KRW, Aug. 2017.</p>
 </li>
-<li><p>Research scholarship for excellent students, Inje University, 2016-2017.</p>
+<li><p>Research scholarship for excellent students, Inje University, 500,000 KRW, 2016.</p>
 </li>
 <li><p>Best research student award from Vietnamese student's association in Korea, 2015.</p>
+</li>
+<li><p>Fully-funded postgraduate scholarships, Inje University, 72,000,000 KRW, 2013-2017.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-17 18:35:35 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-03 15:03:02 GMT Daylight Time.
 </div>
 </div>
 </td>
