--- a/activity.html
+++ b/activity.html
@@ -50,7 +50,7 @@
 <p><div id="TPC Chair/Track Chair"></p>
 <h2>TPC Chair/Track Chair</h2>
 <ul>
-<li><p>2023: <a href="https://soict.org/">SoICT 2023</a></p>
+<li><p>2023: <a href="https://soict.org/">SoICT 2023</a>, <a href="https://globecom2023.ieee-globecom.org/">IEEE GLOBECOM 2023</a> - &ldquo;Edge Learning over Next-Generation Networks&rdquo; Workshop</p>
 </li>
 <li><p>2022: <a href="https://gamenets.eai-conferences.org/2022/">EAI GameNets 2022</a>, <a href="https://soict.org/">SoICT 2022</a>, <a href="https://atc-conf.org/">IEEE ATC 2022</a></p>
 </li>
@@ -151,7 +151,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-04-19 10:22:21 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-04 14:44:42 GMT Daylight Time.
 </div>
 </div>
 </td>
