--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@ Assistant Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p>[05/2023] <font color=red size=+0.5><b>Hot!!!</b></font> I got the Enterprise Ireland Coordination Support Award. </p>
+</li>
+<li><p>[05/2023] Our workshop proposal entitled &ldquo;Edge Learning over Next-Generation Networks&rdquo; - <a href="https://globecom2023.ieee-globecom.org/">IEEE GLOBECOM 2023</a> got accepted. </p>
+</li>
 <li><p>[04/2023] <a href="Misc\COIN_PhDStudents_Recruitment_2023.pdf"><b>Two-fully funded PhD scholarships</b></a> are available. Applicants can contact me via email if you want to join my COIN group @TCD.</p>
 </li>
-<li><p>[04/2023] Congratulations, Dr. Thien and Hoc. We got three papers accepted at IEEE SSP 2023 (Hanoi, Vietnam) and one letter at IEEE WCL.</p>
-</li>
 <li><p>[04/2023] I am invited to serve as track chair for <a href="https://soict.org/">SOICT 2023</a>. Submit your high-quality papers and visit HCM City, Vietnam in Dec. 2023. </p>
-</li>
-<li><p>[04/2023] Congratulations Dr. Thi Nguyen for his work on <a href="">deep RL</a> being accepted to ICCS 2023 (Prague, Czech).</p>
 </li>
 <li><p>[03/2023] Our papers on <a href="">wireless security</a> and <a href="">federated learning</a> got accepted to IEEE ICC 2023 (Rome, Italy).</p>
 </li>
@@ -127,10 +127,10 @@ Assistant Professor, Ph.D. <br />
 <p><div id="About Me"></p>
 <h2>About Me <a href="Misc\Curriculum_Vitae_PHAM.pdf"><font color=red size=+0.5>(<b>CV</a> - <a href="Misc\Curriculum_Vitae_Failure_Pham.pdf"><font color=red size=+0.5></b>CV of Failure</a><b></font></b></font> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5><b>Photo</a>)</b></font></font></h2>
 <p>Quoc-Viet Pham received the B.Sc. degree in electronics and telecommunications engineering from Hanoi University of Science and Technology, Vietnam, in 2013, and the Ph.D. degree in telecommunications engineering from Inje University, Korea, in 2017. He is currently an Assistant Professor in Networks and Distributed Systems with the School of Computer Science and Statistics, Trinity College Dublin (TCD), The University of Dublin, Ireland. He is also serving as an ADVANCE CRT supervisor and an Associate Investigator at the CONNECT centre. Prior to joining TCD, he was in various academic positions with Kyung Hee University (postdoctoral researcher, 2017-2018), Changwon National University (research professor, 2018-2019), and Pusan National University (research professor, 2020-2023). </p>
-<p>He specializes in applying convex optimization, game theory, and machine learning to analyse and optimize cloud edge computing, wireless networks, and IoT systems. Specifically, his research focuses on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). He was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, and a co-recipient of an IEEE ATC Best Paper Award in 2022. He is an Editor of the Journal of Network and Computer Applications and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications</p>
+<p>He specializes in applying convex optimization, game theory, and machine learning to analyse and optimize cloud edge computing, wireless networks, and IoT systems. Specifically, his research focuses on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). He was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, and a co-recipient of an IEEE ATC Best Paper Award in 2022. He is an Editor of the Journal of Network and Computer Applications and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications.</p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-04-26 13:54:45 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-04 14:45:22 GMT Daylight Time.
 </div>
 </div>
 </td>
