--- a/team.html
+++ b/team.html
@@ -135,6 +135,13 @@
 <p><b>Prospective students</b>: Scholarships are available for self-motivated students. Please feel free to send me your resume, transcripts, proposals, and publications (if available). I apologize that I shall not reply due to a large number of received emails. I will get back to you should further information is needed. <br /></p>
 <p><b>Openings</b>:</p>
 <ul>
+<li><p><a href="https://www.tcd.ie/graduatestudies/awards/trda-group/">Trinity Research Doctorate Award 2023-24</a>: 
+If you are a computer science student with demonstrated academic excellence, please feel free to contact me to apply for <b>01 award</b> at TCD School of Computer Science and Statistics.<br />
+Application: Please check a <a href="Misc\TRDA_202324.pdf">short description</a> and contact me via email.<br />
+Deadline: 25 May 2023. <br /> </p>
+</li>
+</ul>
+<ul>
 <li><p><a href="Misc\COIN_PhDStudents_Recruitment_2023.pdf">Two fully-funded PhD scholarships</a> are available for students to join my COIN group @TCD. <br />
 Deadline for applications: 15 May 2023. <br /></p>
 </li>
@@ -164,7 +171,7 @@ Deadline: 24 March 2023. <b>Closed</b></p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-04-25 20:47:02 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-05 10:15:26 GMT Daylight Time.
 </div>
 </div>
 </td>
