--- a/eduwork.html
+++ b/eduwork.html
@@ -18,7 +18,7 @@
 <div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="team.html">Team&nbsp;and&nbsp;Openings</a></div>
+<div class="menu-item"><a href="COIN\index.html">COIN-Lab</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-category">Miscellany</div>
 <div class="menu-item"><a href="ebook.html">Ebooks</a></div>
@@ -65,14 +65,16 @@
 <p><div id="Visiting Experience"></p>
 <h2>Visiting Experience</h2>
 <ul>
-<li><p>Jan. 2016- Feb. 2016: Tokyo University of Science, Japan, Prof. Mikio Hasegawa</p>
+<li><p>Jun. 2023 - Jul. 2023: CIT Lab, University of Ulsan, Korea, Prof. Sunghwan Kim</p>
+</li>
+<li><p>Jan. 2016 - Feb. 2016: Tokyo University of Science, Japan, Prof. Mikio Hasegawa</p>
 </li>
 <li><p>Aug. 2019 - Aug. 2019: Tokyo University of Science, Japan, Prof. Mikio Hasegawa</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-17 18:35:04 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-05 10:29:03 GMT Daylight Time.
 </div>
 </div>
 </td>
