--- a/activity.html
+++ b/activity.html
@@ -18,7 +18,7 @@
 <div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="activity.html" class="current">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="team.html">Team&nbsp;and&nbsp;Openings</a></div>
+<div class="menu-item"><a href="COIN\index.html">COIN-Lab</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-category">Miscellany</div>
 <div class="menu-item"><a href="ebook.html">Ebooks</a></div>
@@ -151,7 +151,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-04 14:44:42 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-05 10:29:11 GMT Daylight Time.
 </div>
 </div>
 </td>
