--- a/ebook.html
+++ b/ebook.html
@@ -18,7 +18,7 @@
 <div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="team.html">Team&nbsp;and&nbsp;Openings</a></div>
+<div class="menu-item"><a href="COIN\index.html">COIN-Lab</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-category">Miscellany</div>
 <div class="menu-item"><a href="ebook.html" class="current">Ebooks</a></div>
@@ -48,7 +48,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-24 09:04:21 GMT Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-05 10:29:22 GMT Daylight Time.
 </div>
 </div>
 </td>
