--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="team.html">Team&nbsp;and&nbsp;Openings</a></div>
+<div class="menu-item"><a href="COIN\index.html" class="current">COIN-Lab</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-category">Miscellany</div>
 <div class="menu-item"><a href="ebook.html">Ebooks</a></div>
@@ -37,7 +37,7 @@ Assistant Professor, Ph.D. <br />
 <p><div id="Contacts"></p>
 <h2>Contacts</h2>
 <ul>
-<li><p>E-mail: <a href="mailto:viet.pham@tcd.ie">viet.pham@tcd.ie</a> / <a href="mailto:vietpq90@gmail.com">vietpq90@gmail.com</a></p>
+<li><p>E-mail: <a href="mailto:viet.pham@tcd.ie">viet.pham@tcd.ie</a></p>
 </li>
 <li><p>Phone: (+353) 083-475-5354</p>
 </li>
@@ -130,7 +130,7 @@ Assistant Professor, Ph.D. <br />
 <p>He specializes in applying convex optimization, game theory, and machine learning to analyse and optimize cloud edge computing, wireless networks, and IoT systems. Specifically, his research focuses on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). He was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, and a co-recipient of an IEEE ATC Best Paper Award in 2022. He is an Editor of the Journal of Network and Computer Applications and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications.</p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-04 14:45:22 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-05 10:26:41 GMT Daylight Time.
 </div>
 </div>
 </td>
